--- a/data622/hw4/hw4.Rmd
+++ b/data622/hw4/hw4.Rmd
@@ -122,8 +122,23 @@ multiplot <- function(..., plotlist=NULL, file, cols=1, layout=NULL) {
 # Methodology  
 In visualizing and exploring the data, I wanted to be able to identify high performing middle schools by examining them on a map and plotting their SHSAT offers (offers made by specialized high schools to students). By also creating some feature variables, I would examine a correlation matrix for the variables and see to identify what makes a good middle school for producing students with a high probability of being given an offer by a specialized high school. Next, I would use different models, a decision tree, multinomial linear regression, and knn clustering to see if there are possible policies that can be implemented to increase the likelihood of students receiving offers for specialized high schools. 
 
-## Exploratory Data Analysis  {.tabset}
+## Exploratory Data Analysis    
 
+For the exploratory data analysis, I decided early to create maps that would help me grapple with the location of middle schools and their SHSAT performance. The following were coded in Python and R using `Plotly` and `Shiny` libraries.  
+
+* [SHSAT Plotly App](https://sslee-specializedhs.azurewebsites.net/)
+* [SHSAT Shiny App](https://logicalschema.shinyapps.io/NYC_DOE_SHSAT/)
+
+
+![https://logicalschema.shinyapps.io/NYC_DOE_SHSAT/](https://github.com/logicalschema/spring2022/raw/main/data622/hw4/data/shiny.png)  
+***
+
+![https://sslee-specializedhs.azurewebsites.net/](https://github.com/logicalschema/spring2022/raw/main/data622/hw4/data/plotly.png)  
+
+
+***
+
+The following code imports that data sets that were created after cleaning.
 
 ```{r}
 # School information: Note: only 2018-2021 are available
@@ -200,6 +215,12 @@ schools2021 <- model_data[model_data$year == 2021, ]
 
 ```  
 
+
+## Years 2018 to 2021 {.tabset}  
+
+The following tabs represent a visual analysis of the data for the years 2018 to 2021. The top 25 middle schools with the highest rate of offers to specialized high schools for each year is also listed. Notable schools such as the Christa McAuliffe School would consistently be at the top for high performing middle schools.
+
+
 ### 2018  
 
 ```{r}
@@ -231,6 +252,7 @@ ggcorr(schools2021[, c(5,7,8,9,10,11,12,13,14,15,16)], label = T, hjust= 0.9)
 
 ```  
 
+***
 
 
 ### 2019  
@@ -263,6 +285,8 @@ ggcorr(schools2021[, c(5,7,8,9,10,11,12,13,14,15,16)], label = T, hjust= 0.9)
 
 ```  
 
+***
+
 ### 2020  
 
 ```{r}
@@ -292,6 +316,8 @@ multiplot(p1, p2, p3, p4, p5, cols=3)
 ggcorr(schools2021[, c(5,7,8,9,10,11,12,13,14,15,16)], label = T, hjust= 0.9)
 
 ```  
+
+***
 
 ### 2021  
 
@@ -323,6 +349,18 @@ ggcorr(schools2021[, c(5,7,8,9,10,11,12,13,14,15,16)], label = T, hjust= 0.9)
 
 ```  
 
+
+***  
+
+# Experimentation & Results  
+
+## Decision Tree  
+
+The following creates training and testing partitions for the data and constructs a decision tree. From the correlation plot, I decided to use `offers_count ~ testers_count + student_count + elaprof + mathprof + coursepassrate`.
+
+
+### Building the Tree
+
 ```{r}
 set.seed(422)
 data_split <- initial_split(model_data, prop = 0.8, strata = district)
@@ -337,16 +375,43 @@ model_spec
 
 # Train the model
 model <- model_spec %>%
-  fit(formula = offers_count ~ testers_count + student_count + elaprof + mathprof + coursepassrate,
+  fit(offers_count ~ testers_count + student_count + elaprof + mathprof + coursepassrate,
       data = schools_train)
 
 # Information about the model
 model
 
-```
+# A plot of the model
+model$fit  %>% rpart.plot(type = 4, roundint=FALSE)
 
 
-# Experimentation & Results  
+```  
+
+
+### Performance of the Tree  
+After building the decision tree model based upon the variables, we will take the mean square error.
+
+```{r}
+# Declare Mean Absolute Error function
+MAE <- function(actual, predicted){
+  mean(abs(actual - predicted))
+}
+
+
+# Generate the predictions using the test data
+predictions <- predict(model, new_data = schools_test) 
+
+# Truncate the preductions
+predictions$.pred <- trunc(predictions$.pred)
+
+# Calculate the mean absolute error
+mae_decisiontree_model <- MAE(schools_test$offers_count, predictions$.pred)
+
+```  
+
+The mean absolute error of the decision tree is **`r mae_decisiontree_model`**.
+
+
 
 
 ```{r}
